class Filme:
    def __init__(self, id, nome_filme, genero, duracao, idade, sala):
        self.id = id
        self.nome_filme = nome_filme
        self.genero = genero
        self.duracao = duracao
        self.idade = idade
        self.sala = sala
