class Pessoa:
    def __init__(self, id, nome, sobrenome, rg):
        self.id = id
        self.nome = nome
        self.sobrenome = sobrenome
        self.rg = rg

    def comprar(self, ingresso):
        # Implementação do método comprar
        pass
