from filme import Filme

class Sala:
    def __init__(self, id, n_sala, filme):
        self.id = id
        self.n_sala = n_sala
        self.filme = filme
